samples/_failures_safe/1761242162_3e8676_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ab752f9.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_4ab752f9.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_4ab752f9.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ab752f9.c:160:13: error: expected declaration or statement at end of input
